# gxy

./: LICENSE
airvpn-suite-flake/: default.nix  flake.nix  nixos-kernel-modules-path.patch  nixos-path-lookup.patch
anisette-v3-server-flake/: dub-lock.json  flake.nix  sources.patch
axum-htmx-todo/: .gitignore  Cargo.toml  shell.nix
axum-htmx-todo/migrations/: 20251114152133_todos.sql
axum-htmx-todo/src/: main.rs
bouncer/: Cargo.toml
bouncer/src/: app.rs  backend.rs  browser.rs  main.rs  message.rs  rules.rs  ui.rs
bouncer/src/backend/: tui.rs
elisp/: elfeed-protocol-miniflux.el  org-resnap.el
qwen3-elrc/: .gitignore  lrc2elrc.py  shell.nix
wlr-nightlight-rs/: Cargo.toml
wlr-nightlight-rs/src/: main.rs
yt-transcript-scrape/: README.md  pyproject.toml  shell.nix  yt_transcript_search.py
